# hpcgame

./: .gitignore
2023/1A/: README.md
2023/1B/: README.md  task.py
2023/1C/: answer.yaml
2023/1D/: .gitignore  Makefile  gen.py  solution.cpp
2023/2A/: Makefile  README.md  int.cpp  rhs.cpp  rhs.h
2023/2B/: Makefile  README.md  mul.cpp  rhs.cpp  rhs.h
2023/2C/: Makefile  README.md  rhs.cpp  rhs.h  solve.cpp
2023/2D/c/: Makefile  answer.c
2023/2D/cpp/: Makefile  answer  answer.cpp  parasort.h  rng.cpp
2023/2D/go/: go.mod  go.sum  main.go
2023/2D/go+rs/: .gitignore  Makefile  README.md  go.mod  main.go
2023/2D/go+rs/lib/: parsort.h
2023/2D/go+rs/lib/parsort/: Cargo.toml
2023/2D/go+rs/lib/parsort/src/: lib.rs
2023/2D/rs/: .gitignore  Cargo.toml  Makefile  README.md
2023/2D/rs+go/: .gitignore  Cargo.toml  Makefile  build.rs  go.mod  input.txt  lib.go
2023/2D/rs+go/src/: main.rs
2023/2D/rs/src/: main.rs
2023/2E/: .gitignore  CMakeLists.txt  Makefile  answer.cpp  fast_float.hpp  gen.py  python_native.py
2023/2E/PaxHeader/: CMakeLists.txt  answer.cpp  python_native.py
2023/2F/: .gitignore  Makefile  cpi.c
2023/3A/: README.md  cgsolver.py  main.py
2023/3B/: .gitignore  Makefile  check.py  conf.data  focus.cu  focus.npio.py  focus.py  focus.swap.cu  focus.taichi.cu  focus_taichi.cu  gendata.py  meson.build  out.data
2023/3C/: .gitignore  PyTorch.ipynb  README.md  Seed.ipynb  Task1.ipynb  environment.yaml
2023/4A/: .gitignore  answer.cpp
2023/4B/: .gitignore  CMakeLists.txt  README.md
2023/4B/cmake/local/: DownloadProject.cmake  DownloadProject.cmake.in
2023/4B/cmake/public/: GTest.cmake  Utils.cmake
2023/4B/src/basic/: broadcast.c  broadcast.h  cast.c  cast.h  duplicate.c  duplicate.h  factories.c  factories.h  index_utils.c  index_utils.h  reshape.c  reshape.h  slice.c  slice.h  squeeze.c  squeeze.h
2023/4B/src/core/: allocator.c  allocator.h  device.h  dispatch.h  log.h  macros.h  shape.c  shape.h  status.h  storage.c  storage.h  tensor.c  tensor.h  types.c  types.h  utils.h
2023/4B/src/math/: matmul_simple.c  matmul_simple.h
2023/4B/src/nn/: conv2d_simple.c  conv2d_simple.h  resize2d_bilinear.c  resize2d_bilinear.h
2023/4B/test/: CMakeLists.txt  conv2d_simple_test.cpp  matmul_simple_test.cpp  resize2d_bilinear_test.cpp  test_utlis.h
2023/4B/test/test_data/: read_and_write_data.h
